--- a/build-a-freeCodeCamp-forum-homepage-proxy/package.json
+++ b/build-a-freeCodeCamp-forum-homepage-proxy/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "node-fetch": "^2.6.0"
   }
