--- a/exercise-tracker/package.json
+++ b/exercise-tracker/package.json
@@ -7,11 +7,12 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.17.1",
-    "mongoose": "^5.9.15",
-    "mongodb": "^3.5.7",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "mongodb": "^3.5.7",
+    "mongoose": "^5.9.15",
     "shortid": "^2.2.15"
   },
   "repository": {
