--- a/file-metadata-microservice/package.json
+++ b/file-metadata-microservice/package.json
@@ -7,9 +7,10 @@
 		"start": "node server.js"
 	},
 	"dependencies": {
+		"cors": "^2.8.1",
+		"dotenv": "^8.2.0",
 		"express": "^5.0.0-alpha.2",
-		"multer": "^1.1.0",
-		"cors": "^2.8.1"
+		"multer": "^1.1.0"
 	},
 	"engines": {
 		"node": "4.4.5"
