--- a/metric-imperial-converter/package.json
+++ b/metric-imperial-converter/package.json
@@ -10,16 +10,17 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.14.0",
-    "cors": "^2.8.1",
     "body-parser": "^1.15.2",
     "chai": "^3.5.0",
-    "mongodb": "^2.2.16",
     "chai-http": "^3.0.0",
-    "mocha": "^3.2.0",
-    "zombie": "^5.0.5",
+    "cors": "^2.8.1",
+    "dotenv": "^8.2.0",
+    "express": "^4.14.0",
     "helmet": "^3.1.0",
-    "mathjs": "^6.0.4"
+    "mathjs": "^6.0.4",
+    "mocha": "^3.2.0",
+    "mongodb": "^2.2.16",
+    "zombie": "^5.0.5"
   },
   "engines": {
     "node": "4.4.3"
