--- a/personal-library/package.json
+++ b/personal-library/package.json
@@ -11,17 +11,18 @@
     "test": "PORT=3005 mocha --exit --ui tdd tests/"
   },
   "dependencies": {
-    "express": "^4.17.1",
-    "cors": "^2.8.5",
     "body-parser": "^1.19.0",
     "chai": "^4.2.0",
-    "mongodb": "^3.5.7",
     "chai-http": "^4.3.0",
-    "mocha": "^7.1.1",
-    "zombie": "^6.1.4",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
     "helmet": "^3.21.3",
+    "mocha": "^7.1.1",
+    "mongodb": "^3.5.7",
     "nocache": "^2.1.0",
-    "shortid": "^2.2.15"
+    "shortid": "^2.2.15",
+    "zombie": "^6.1.4"
   },
   "license": "MIT"
 }
