--- a/stock-price-checker-proxy/package.json
+++ b/stock-price-checker-proxy/package.json
@@ -7,10 +7,11 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.17.1",
     "axios": "^0.19.0",
-    "nedb": "^1.8.0",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "nedb": "^1.8.0"
   },
   "engines": {
     "node": "10.x"
