--- a/stock-price-checker/package.json
+++ b/stock-price-checker/package.json
@@ -14,6 +14,7 @@
     "chai": "^3.5.0",
     "chai-http": "^3.0.0",
     "cors": "^2.8.1",
+    "dotenv": "^8.2.0",
     "express": "^4.14.0",
     "helmet": "^3.21.0",
     "mocha": "^3.2.0",
