feat: add and format sample.env files

--- a/stock-price-checker-proxy/sample.env
+++ b/stock-price-checker-proxy/sample.env
@@ -1,9 +1,3 @@
-# Environment Config
-
-# store your secrets and config variables in here
-
-# reference these in your code with process.env.SECRET
-# note: .env is a shell file so there can't be spaces around '='
-
 PORT=
-DB_URI=
+CACHE_TTL_MINUTES=
+IEX_API_KEY=
