--- a/p2p-video-chat-application/package.json
+++ b/p2p-video-chat-application/package.json
@@ -8,12 +8,13 @@
     "start": "node index.js"
   },
   "dependencies": {
+    "browserify-middleware": "^8.0.0",
+    "dotenv": "^8.2.0",
     "express": "^4.16.2",
     "getusermedia": "^2.0.1",
     "jquery": "^3.2.1",
     "simple-peer": "^8.2.0",
     "socket.io": "^2.0.4",
-    "socket.io-client": "^2.0.4",
-    "browserify-middleware": "^8.0.0"
+    "socket.io-client": "^2.0.4"
   }
 }
