fix: change start scripts + add package-lock + gitignore

--- a/build-a-pinterest-clone/package.json
+++ b/build-a-pinterest-clone/package.json
@@ -4,7 +4,7 @@
   "description": "Full Stack Pinterest Clone",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
