--- a/manage-a-book-trading-club/package.json
+++ b/manage-a-book-trading-club/package.json
@@ -4,7 +4,7 @@
   "description": "Trade books with other users",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "node server.js",
     "test": "mocha"
   },
   "repository": {
