--- a/p2p-video-chat-application/package.json
+++ b/p2p-video-chat-application/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "node server.js"
   },
   "dependencies": {
     "browserify-middleware": "^8.0.0",
