--- a/weather-proxy/package.json
+++ b/weather-proxy/package.json
@@ -4,7 +4,7 @@
   "description": "fCC Weather API Passthrough",
   "main": "server.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node server.js"
   },
   "dependencies": {
     "cors": "^2.8.4",
