--- a/manage-a-book-trading-club/package.json
+++ b/manage-a-book-trading-club/package.json
@@ -2,7 +2,7 @@
   "name": "book-exchange",
   "version": "0.1.0",
   "description": "Trade books with other users",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "test": "mocha"
