--- a/p2p-video-chat-application/package.json
+++ b/p2p-video-chat-application/package.json
@@ -2,7 +2,7 @@
   "name": "p2p-video-chat",
   "version": "1.0.0",
   "description": "A simple socket.io based video chat app",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
