--- a/build-a-pinterest-clone/package.json
+++ b/build-a-pinterest-clone/package.json
@@ -2,7 +2,7 @@
   "name": "pinterest-clone",
   "version": "1.0.0",
   "description": "Full Stack Pinterest Clone",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
