--- a/sudoku-solver/sample.env
+++ b/sudoku-solver/sample.env
@@ -1,2 +1,10 @@
-PORT=
+# Environment Config
+
+# store your secrets and config variables in here
+# only invited collaborators will be able to see your .env values
+
+# reference these in your code with process.env.SECRET
+# note: .env is a shell file so there can't be spaces around '='
+
+PORT=3000
 # NODE_ENV=test
