--- a/american-british-translator/package.json
+++ b/american-british-translator/package.json
@@ -1,23 +1,24 @@
 {
   "name": "american-british-english-translator",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "Quality Assurance 5: American / British English Translator",
   "main": "server.js",
   "scripts": {
     "start": "nodemon server.js",
-    "test": "mocha --timeout 5000 --require @babel/register --recursive --exit --ui tdd tests/"
+    "test": "mocha --timeout 5000 --require @babel/register --recursive --ui tdd tests/"
   },
   "dependencies": {
-    "@babel/core": "^7.9.0",
-    "@babel/preset-env": "^7.9.5",
-    "@babel/register": "^7.9.0",
+    "@babel/core": "^7.11.6",
+    "@babel/preset-env": "^7.11.5",
+    "@babel/register": "^7.11.5",
     "body-parser": "^1.19.0",
     "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "jsdom": "^16.2.2",
-    "mocha": "^7.1.1",
+    "jsdom": "^16.4.0",
+    "mocha": "^8.1.3",
     "nodemon": "^2.0.4"
   },
   "license": "MIT"
