Issue Tracker Refactor

--- a/issue-tracker/package.json
+++ b/issue-tracker/package.json
@@ -1,24 +1,31 @@
 {
-  "name": "issue-tracker",
-  "version": "1.0.0",
-  "description": "Quality Assurance 2: Issue Tracker",
-  "main": "server.js",
-  "scripts": {
-    "start": "nodemon server.js",
-    "test": "PORT=3005 mocha --exit --ui tdd tests/"
-  },
-  "dependencies": {
-    "body-parser": "^1.19.0",
-    "chai": "^4.2.0",
-    "chai-http": "^4.3.0",
-    "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "helmet": "^3.21.3",
-    "mocha": "^7.1.1",
-    "mongodb": "^3.5.7",
-    "nodemon": "^2.0.4",
-    "zombie": "^6.1.4"
-  },
-  "license": "MIT"
+	"name": "fcc-issue-tracker",
+	"version": "1.0.0",
+	"description": "Issue Tracker Boilerplate",
+	"main": "server.js",
+	"scripts": {
+		"start": "node server.js",
+		"test": "PORT=3005 mocha --exit --ui tdd tests/"
+	},
+	"dependencies": {
+		"body-parser": "^1.19.0",
+		"chai": "^4.2.0",
+		"chai-http": "^4.3.0",
+		"cors": "^2.8.5",
+		"dotenv": "^8.2.0",
+		"express": "^4.17.1",
+		"mocha": "^8.1.3",
+		"mongodb": "^3.6.2",
+		"mongoose": "^5.10.9"
+	},
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/freeCodeCamp/boilerplate-project-issuetracker"
+	},
+	"keywords": [
+		"node",
+		"hyperdev",
+		"express"
+	],
+	"license": "MIT"
 }
