--- a/metric-imperial-converter/package.json
+++ b/metric-imperial-converter/package.json
@@ -1,38 +1,31 @@
 {
-  "//1": "describes your app and its dependencies",
-  "//2": "https://docs.npmjs.com/files/package.json",
-  "//3": "updating this file will download and update your packages",
-  "name": "my-hyperdev-app",
-  "version": "0.0.1",
-  "description": "What am I about?",
-  "main": "server.js",
-  "scripts": {
-    "start": "node server.js"
-  },
-  "dependencies": {
-    "body-parser": "^1.15.2",
-    "chai": "^3.5.0",
-    "chai-http": "^3.0.0",
-    "cors": "^2.8.1",
-    "dotenv": "^8.2.0",
-    "express": "^4.14.0",
-    "helmet": "^3.1.0",
-    "mathjs": "^6.0.4",
-    "mocha": "^3.2.0",
-    "mongodb": "^2.2.16",
-    "zombie": "^5.0.5"
-  },
-  "engines": {
-    "node": "4.4.3"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://hyperdev.com/#!/project/welcome-project"
-  },
-  "keywords": [
-    "node",
-    "hyperdev",
-    "express"
-  ],
-  "license": "MIT"
+	"name": "fcc-imperial-metric-converter-boilerplate",
+	"version": "1.0.0",
+	"description": "Metric / Imperial Unit Converter",
+	"main": "server.js",
+	"scripts": {
+		"start": "node server.js"
+	},
+	"dependencies": {
+		"body-parser": "^1.19.0",
+		"chai": "^4.2.0",
+		"chai-http": "^4.3.0",
+		"cors": "^2.8.5",
+		"dotenv": "^8.2.0",
+		"express": "^4.17.1",
+		"mocha": "^8.1.3"
+	},
+	"engines": {
+		"node": "12.*"
+	},
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/freeCodeCamp/boilerplate-project-metricimpconverter"
+	},
+	"keywords": [
+		"node",
+		"freeCodeCamp",
+		"express"
+	],
+	"license": "MIT"
 }
