--- a/personal-library/package.json
+++ b/personal-library/package.json
@@ -5,7 +5,8 @@
 	"main": "server.js",
 	"scripts": {
 		"dev": "nodemon server.js",
-		"start": "node server.js"
+		"start": "node server.js",
+		"test": "mocha -u tdd ./tests/*.js"
 	},
 	"dependencies": {
 		"body-parser": "^1.15.2",
