Use nodemon to get tests to work
Signed-off-by: nhcarrigan <nhcarrigan@gmail.com>

--- a/personal-library/package.json
+++ b/personal-library/package.json
@@ -5,7 +5,7 @@
 	"main": "server.js",
 	"scripts": {
 		"dev": "nodemon server.js",
-		"start": "node server.js",
+		"start": "nodemon server.js",
 		"test": "mocha -u tdd ./tests/*.js"
 	},
 	"dependencies": {
