--- a/personal-library/package.json
+++ b/personal-library/package.json
@@ -1,28 +1,37 @@
 {
-  "//1": "describes your app and its dependencies",
-  "//2": "https://docs.npmjs.com/files/package.json",
-  "//3": "updating this file will download and update your packages",
-  "name": "personal-library",
-  "version": "0.0.1",
-  "description": "Quality Assurance 3: Personal Library",
-  "main": "server.js",
-  "scripts": {
-    "start": "node server.js",
-    "test": "PORT=3005 mocha --exit --ui tdd tests/"
-  },
-  "dependencies": {
-    "body-parser": "^1.19.0",
-    "chai": "^4.2.0",
-    "chai-http": "^4.3.0",
-    "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "helmet": "^3.21.3",
-    "mocha": "^7.1.1",
-    "mongodb": "^3.5.7",
-    "nocache": "^2.1.0",
-    "shortid": "^2.2.15",
-    "zombie": "^6.1.4"
-  },
-  "license": "MIT"
+	"name": "fcc-library-example",
+	"version": "1.0.0",
+	"description": "example",
+	"main": "server.js",
+	"scripts": {
+		"start": "nodemon server.js",
+		"test": "mocha -u tdd ./tests/*.js"
+	},
+	"dependencies": {
+		"body-parser": "^1.15.2",
+		"chai": "^4.2.0",
+		"chai-http": "^4.3.0",
+		"cors": "^2.8.1",
+		"dotenv": "^8.2.0",
+		"express": "^4.14.0",
+		"mocha": "^3.2.0",
+		"mongodb": "^3.6.2",
+		"mongoose": "^5.10.13",
+		"zombie": "^5.0.5"
+	},
+	"engines": {
+		"node": "^12.*"
+	},
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/freeCodeCamp/demo-projects"
+	},
+	"keywords": [
+		"node",
+		"express"
+	],
+	"license": "MIT",
+	"devDependencies": {
+		"nodemon": "^2.0.6"
+	}
 }
