--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "restart": "pm2 restart ecosystem.config.js --update-env",
     "stop": "pm2 stop ecosystem.config.js",
     "delete": "pm2 delete ecosystem.config.js"
+  },
+  "dependencies": {
+    "dotenv": "^8.2.0"
   }
 }
