feat: enable PM2 for image-search-abstraction-layer

--- a/apps/image-search-abstraction-layer/sample.env
+++ b/apps/image-search-abstraction-layer/sample.env
@@ -1,8 +1,8 @@
-PORT=
+# PORT=
 
-MONGO_URI=
+# DB_URI=
 
-# keys for google-images package:
-# https://www.npmjs.com/package/google-images
-CSEID=
-APIKEY=
+# # keys for google-images package:
+# # https://www.npmjs.com/package/google-images
+# CSEID=
+# APIKEY=
