--- a/exercise-tracker/package.json
+++ b/exercise-tracker/package.json
@@ -7,7 +7,6 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
@@ -15,13 +14,5 @@
     "mongoose": "^5.9.15",
     "shortid": "^2.2.15"
   },
-  "repository": {
-    "url": "https://gomix.com/#!/project/welcome-project"
-  },
-  "license": "MIT",
-  "keywords": [
-    "node",
-    "gomix",
-    "express"
-  ]
+  "license": "MIT"
 }
