--- a/american-british-translator/package.json
+++ b/american-british-translator/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "nodemon server.js",
-    "test": "mocha --timeout 5000 --require @babel/register --recursive --ui tdd tests/"
+    "test": "mocha --timeout 5000 --require @babel/register --recursive --exit --ui tdd tests/"
   },
   "dependencies": {
     "@babel/core": "^7.11.6",
