--- a/personal-library/package.json
+++ b/personal-library/package.json
@@ -5,7 +5,7 @@
 	"main": "server.js",
 	"scripts": {
 		"start": "nodemon server.js",
-		"test": "mocha -u tdd ./tests/*.js"
+		"test": "mocha --exit -u tdd ./tests/*.js"
 	},
 	"dependencies": {
 		"body-parser": "^1.15.2",
