chore: no workspaces okay

--- a/package.json
+++ b/package.json
@@ -2,33 +2,8 @@
   "name": "@freecodecamp/demo-projects",
   "version": "0.0.0",
   "description": "Example projects for the freeCodeCamp.org curriculum",
-  "workspaces": [
-    "american-british-translator",
-    "anonymous-message-board",
-    "build-a-pinterest-clone",
-    "chart-the-stock-market",
-    "exercise-tracker",
-    "file-metadata-service",
-    "forum-proxy",
-    "image-search-abstraction-layer",
-    "issue-tracker",
-    "manage-a-book-trading-club",
-    "metric-imperial-converter",
-    "nightlife-coordination-app",
-    "p2p-video-chat-application",
-    "personal-library",
-    "request-header-parser-microservice",
-    "secure-real-time-multiplayer-game",
-    "stock-price-checker",
-    "stock-price-checker-proxy",
-    "sudoku-solver",
-    "timestamp-microservice",
-    "twitch-proxy",
-    "url-shortener-microservice",
-    "voting-app",
-    "weather-proxy"
-  ],
   "scripts": {
+    "postinstall": "node install-deps.js",
     "test": "npm-run-all -s test:*",
     "test:american-british-translator": "cd american-british-translator && npm run test",
     "test:anonymous-message-board": "DB_URI='mongodb://localhost:27017/message-board' cd anonymous-message-board && npm run test",
