--- a/manage-a-book-trading-club/package.json
+++ b/manage-a-book-trading-club/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "test": "mocha --exit"
+    "test": "mocha --exit --ui tdd test/"
   },
   "repository": {
     "type": "git",
