--- a/package.json
+++ b/package.json
@@ -6,14 +6,15 @@
     "postinstall": "node install-deps.js",
     "test": "npm-run-all -s test:*",
     "test:american-british-translator": "cd american-british-translator && npm run test",
-    "test:anonymous-message-board": "DB_URI='mongodb://localhost:27017/message-board' cd anonymous-message-board && npm run test",
-    "test:issue-tracker": "DB='mongodb://localhost:27017/issue-tracker' cd issue-tracker && npm run test",
-    "test:manage-a-book-trading-club": "MONGO_URI='mongodb://localhost:27017/book-club' cd manage-a-book-trading-club && npm run test",
-    "test:personal-library": "DB='mongodb://localhost:27017/library' cd personal-library && npm run test",
+    "ntest:anonymous-message-board": "cd anonymous-message-board && cp sample.env .env && npm run test",
+    "test:issue-tracker": "cd issue-tracker && cp sample.env .env && npm run test",
+    "ntest:manage-a-book-trading-club": "cd manage-a-book-trading-club && cp sample.env .env && npm run test",
+    "test:personal-library": "cd personal-library && cp sample.env .env && npm run test",
     "test:secure-real-time-multiplayer-game": "cd secure-real-time-multiplayer-game && npm run test",
     "test:sudoku-solver": "cd sudoku-solver && npm run test"
   },
   "devDependencies": {
     "npm-run-all": "^4.1.5"
-  }
+  },
+  "dependencies": {}
 }
