--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "postinstall": "node install-deps.js",
     "test": "npm-run-all -s test:*",
     "test:american-british-translator": "cd american-british-translator && npm run test",
-    "ntest:anonymous-message-board": "cd anonymous-message-board && cp sample.env .env && npm run test",
+    "test:anonymous-message-board": "cd anonymous-message-board && cp sample.env .env && npm run test",
     "test:issue-tracker": "cd issue-tracker && cp sample.env .env && npm run test",
     "ntest:manage-a-book-trading-club": "cd manage-a-book-trading-club && cp sample.env .env && npm run test",
     "test:personal-library": "cd personal-library && cp sample.env .env && npm run test",
