--- a/manage-a-book-trading-club/sample.env
+++ b/manage-a-book-trading-club/sample.env
@@ -1,4 +1,6 @@
-GITHUB_KEY=
-GITHUB_SECRET=
+GITHUB_KEY="foo"
+GITHUB_SECRET="bar"
+GOOGLE_KEY="foo"
+GOOGLE_SECRET="bar"
 MONGO_URI="mongodb://localhost:27017/book-club"
-APP_URL=
+APP_URL="http://localhost:3000"
