feat: enable metric converter tests

--- a/metric-imperial-converter/package.json
+++ b/metric-imperial-converter/package.json
@@ -4,7 +4,8 @@
 	"description": "Metric / Imperial Unit Converter",
 	"main": "server.js",
 	"scripts": {
-		"start": "node server.js"
+		"start": "node server.js",
+		"test": "PORT=3005 mocha --exit --ui tdd tests/"
 	},
 	"dependencies": {
 		"body-parser": "^1.19.0",
