--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "test:anonymous-message-board": "cd anonymous-message-board && cp sample.env .env && npm run test",
     "test:issue-tracker": "cd issue-tracker && cp sample.env .env && npm run test",
     "test:manage-a-book-trading-club": "cd manage-a-book-trading-club && cp sample.env .env && npm run test",
+    "test:metric-imperial-converter": "cd metric-imperial-converter && npm run test",
     "test:personal-library": "cd personal-library && cp sample.env .env && npm run test",
     "test:secure-real-time-multiplayer-game": "cd secure-real-time-multiplayer-game && npm run test",
     "test:sudoku-solver": "cd sudoku-solver && npm run test"
