feat: enable stock price tests

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "test:metric-imperial-converter": "cd metric-imperial-converter && npm run test",
     "test:personal-library": "cd personal-library && cp sample.env .env && npm run test",
     "test:secure-real-time-multiplayer-game": "cd secure-real-time-multiplayer-game && npm run test",
+    "test:stock-price-checker": "cd stock-price-checker && cp sample.env .env && npm run test",
     "test:sudoku-solver": "cd sudoku-solver && npm run test"
   },
   "devDependencies": {
