--- a/stock-price-checker/package.json
+++ b/stock-price-checker/package.json
@@ -7,7 +7,8 @@
   "description": "What am I about?",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "test": "PORT=3005 mocha --exit --ui tdd tests/"
   },
   "dependencies": {
     "body-parser": "^1.15.2",
