--- a/exercise-tracker/package.json
+++ b/exercise-tracker/package.json
@@ -4,12 +4,16 @@
   "description": "A REST API project, part of Free Code Camp's curriculum",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "test": "PORT=3005 mocha --exit --ui tdd tests/"
   },
   "dependencies": {
+    "chai": "^4.3.4",
+    "chai-http": "^4.3.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "mocha": "^7.2.0",
     "mongodb": "^3.5.7",
     "mongoose": "^5.9.15",
     "shortid": "^2.2.15"
