feat: write timestamp tests

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "test:request-header-parser-microservice": "cd request-header-parser-microservice && npm run test",
     "test:secure-real-time-multiplayer-game": "cd secure-real-time-multiplayer-game && npm run test",
     "test:stock-price-checker": "cd stock-price-checker && cp sample.env .env && npm run test",
-    "test:sudoku-solver": "cd sudoku-solver && npm run test"
+    "test:sudoku-solver": "cd sudoku-solver && npm run test",
+    "test:timestamp-microservice": "cd timestamp-microservice && npm run test"
   },
   "devDependencies": {
     "npm-run-all": "^4.1.5"
