--- a/timestamp-microservice/package.json
+++ b/timestamp-microservice/package.json
@@ -4,12 +4,16 @@
   "description": "API project for freeCodeCamp",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "test": "PORT=3005 mocha --exit --ui tdd tests/"
   },
   "dependencies": {
+    "chai": "^4.3.4",
+    "chai-http": "^4.3.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mocha": "^7.2.0"
   },
   "license": "MIT"
 }
