--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "test:anonymous-message-board": "cd anonymous-message-board && cp sample.env .env && npm run test",
     "test:exercise-tracker": "cd exercise-tracker && cp sample.env .env && npm run test",
     "test:file-metadata-microservice": "cd file-metadata-microservice && npm run test",
+    "test:forum-proxy": "cd forum-proxy && npm run test",
     "test:issue-tracker": "cd issue-tracker && cp sample.env .env && npm run test",
     "test:manage-a-book-trading-club": "cd manage-a-book-trading-club && cp sample.env .env && npm run test",
     "test:metric-imperial-converter": "cd metric-imperial-converter && npm run test",
