--- a/build-a-pinterest-clone/package.json
+++ b/build-a-pinterest-clone/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "wait-port -t 10000 3000"
   },
   "keywords": [],
   "author": "",
