--- a/build-a-pinterest-clone/sample.env
+++ b/build-a-pinterest-clone/sample.env
@@ -1,5 +1,5 @@
-GITHUB_KEY=
-GITHUB_SECRET=
-DB_URI=
+GITHUB_KEY="foo"
+GITHUB_SECRET="bar"
+DB_URI="mongodb://localhost:27017/pinterest"
 APP_URL=
 NODE_ENV=
