--- a/voting-app/sample.env
+++ b/voting-app/sample.env
@@ -2,4 +2,4 @@
 # https://stackoverflow.com/questions/49101567/mongodb-atlas-not-authorized-on-admin-to-execute-command/57182045#57182045
 
 PORT=
-MONGO_URI=
+MONGO_URI="mongodb://localhost:27017/voting-app"
