--- a/chart-the-stock-market/package.json
+++ b/chart-the-stock-market/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "wait-port -t 10000 3000"
   },
   "author": "",
   "license": "ISC",
