--- a/image-search-abstraction-layer/package.json
+++ b/image-search-abstraction-layer/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "wait-port -t 10000 3000"
   },
   "repository": {
     "type": "git",
