--- a/p2p-video-chat-application/package.json
+++ b/p2p-video-chat-application/package.json
@@ -4,7 +4,7 @@
   "description": "A simple socket.io based video chat app",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "wait-port -t 10000 3000",
     "start": "node server.js"
   },
   "dependencies": {
