--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Example projects for the freeCodeCamp.org curriculum",
   "scripts": {
     "postinstall": "node install-deps.js",
-    "test": "npm-run-all -s test:*",
+    "test": "echo 'The test suite is meant to run locally or in a CI environment. \u001b[31mDo NOT run this in production.\u001b[37m If you intend to run the tests, use \"npm run test-local-or-ci\".'",
+    "test-local-or-ci": "npm-run-all -s test:*",
     "test:american-british-translator": "cd american-british-translator && npm run test",
     "test:anonymous-message-board": "cd anonymous-message-board && cp sample.env .env && npm run test",
     "test:exercise-tracker": "cd exercise-tracker && cp sample.env .env && npm run test",
