--- a/.github/workflows/node-ci.yml
+++ b/.github/workflows/node-ci.yml
@@ -21,6 +21,9 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node-version }}
+      
+      - name: Update npm
+        run: npm i -g npm@8
 
       - name: Start database
         uses: supercharge/mongodb-github-action@1.6.0
