--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.0.0",
   "description": "Example projects for the freeCodeCamp.org curriculum",
   "scripts": {
-    "postinstall": "node install-deps.js",
     "test": "echo 'The test suite is meant to run locally or in a CI environment. \u001b[31mDo NOT run this in production.\u001b[37m If you intend to run the tests, use \"npm run test-local-or-ci\".'",
     "test-local-or-ci": "npm-run-all -s test:*",
     "test:american-british-translator": "cd american-british-translator && npm run test",
@@ -35,5 +34,31 @@
     "npm-run-all": "^4.1.5",
     "wait-port": "^0.2.9"
   },
-  "dependencies": {}
+  "dependencies": {},
+  "workspaces": [
+    "american-british-translator",
+    "anonymous-message-board",
+    "build-a-pinterest-clone",
+    "chart-the-stock-market",
+    "exercise-tracker",
+    "file-metadata-microservice",
+    "forum-proxy",
+    "image-search-abstraction-layer",
+    "issue-tracker",
+    "manage-a-book-trading-club",
+    "metric-imperial-converter",
+    "p2p-video-chat-application",
+    "personal-library",
+    "request-header-parser-microservice",
+    "secure-real-time-multiplayer-game",
+    "scripts/twitch-proxy",
+    "stock-price-checker",
+    "stock-price-checker-proxy",
+    "sudoku-solver",
+    "timestamp-microservice",
+    "twitch-proxy",
+    "url-shortener-microservice",
+    "voting-app",
+    "weather-proxy"
+  ]
 }
