--- a/.github/workflows/node-ci.yml
+++ b/.github/workflows/node-ci.yml
@@ -11,7 +11,8 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [12.x]
+        node-version: [12, 14, 16]
+      fail-fast: false
 
     steps:
       - name: Checkout Source Files
@@ -21,6 +22,9 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node-version }}
+
+      - name: Update npm
+        run: npm i -g npm@8
 
       - name: Start database
         uses: supercharge/mongodb-github-action@1.6.0
