fix: pin all dependencies
I think we want to do this, since we want reproducibility (exactly the
same versions in CI as in production), not flexibility.

--- a/renovate.json
+++ b/renovate.json
@@ -6,6 +6,7 @@
   "major": {
     "dependencyDashboardApproval": true
   },
+  "rangeStrategy": "pin",
   "packageRules": [
     {
       "matchUpdateTypes": ["minor", "patch", "pin", "digest"],
