--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "@freecodecamp/demo-projects",
   "version": "0.0.0",
+  "engines": {
+    "npm": "^8"
+  },
   "description": "Example projects for the freeCodeCamp.org curriculum",
   "scripts": {
     "test": "echo 'The test suite is meant to run locally or in a CI environment. \u001b[31mDo NOT run this in production.\u001b[37m If you intend to run the tests, use \"npm run test-local-or-ci\".'",
