chore: remove engines from sub-packages
They're all going to be using the same version of node, anyway

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "@freecodecamp/demo-projects",
   "version": "0.0.0",
   "engines": {
+    "node": "16.13.2",
     "npm": "8.3.2"
   },
   "description": "Example projects for the freeCodeCamp.org curriculum",
