refactor: move scripts/twitch-proxy to root workspace

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "restart": "pm2 restart ecosystem.config.js --update-env",
     "stop": "pm2 stop ecosystem.config.js",
     "delete": "pm2 delete ecosystem.config.js",
+    "update-and-reload-twitch-proxy": "pm2 start scripts/twitch-proxy/updateApiKey.js --no-autorestart --cron \"0 0 1 * *\" && pm2 reload apps/twitch-proxy --update-env",
     "test": "echo 'The test suite is meant to run locally or in a CI environment. \u001b[31mDo NOT run this in production.\u001b[37m If you intend to run the tests, use \"npm run test-local-or-ci\".'",
     "test-local-or-ci": "npm-run-all -s test:*",
     "test:american-british-translator": "cd american-british-translator && npm run test",
@@ -44,6 +45,7 @@
   },
   "dependencies": {
     "dotenv": "^14.3.0",
+    "node-fetch": "^2.6.7",
     "pm2": "^5.1.2"
   },
   "workspaces": [
@@ -62,7 +64,6 @@
     "apps/personal-library",
     "apps/request-header-parser-microservice",
     "apps/secure-real-time-multiplayer-game",
-    "scripts/twitch-proxy",
     "apps/stock-price-checker",
     "apps/stock-price-checker-proxy",
     "apps/sudoku-solver",
