--- a/apps/anonymous-message-board/package.json
+++ b/apps/anonymous-message-board/package.json
@@ -4,7 +4,7 @@
   "description": "Information Security 2: Anonymous Message Board",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon server.js",
+    "start": "node server.js",
     "test": "PORT=3005 mocha --exit --ui tdd tests/"
   },
   "dependencies": {
@@ -16,8 +16,7 @@
     "express": "4.17.2",
     "helmet": "3.23.3",
     "mocha": "9.2.0",
-    "mongodb": "3.7.3",
-    "nodemon": "2.0.15"
+    "mongodb": "3.7.3"
   },
   "license": "MIT"
 }
