--- a/apps/secure-real-time-multiplayer-game/package.json
+++ b/apps/secure-real-time-multiplayer-game/package.json
@@ -4,7 +4,7 @@
   "description": "Information Security 5: Secure Real-Time Multiplayer Game",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon server.js",
+    "start": "node server.js",
     "test": "PORT=3005 mocha --require @babel/register --recursive --exit --ui tdd tests/"
   },
   "dependencies": {
@@ -20,7 +20,6 @@
     "helmet": "3.23.3",
     "jsdom": "16.7.0",
     "mocha": "9.2.0",
-    "nodemon": "2.0.15",
     "socket.io": "2.4.1",
     "socket.io-client": "2.4.0"
   },
