--- a/apps/sudoku-solver/package.json
+++ b/apps/sudoku-solver/package.json
@@ -4,7 +4,7 @@
   "description": "Quality Assurance 4: Sudoku Solver",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon server.js",
+    "start": "node server.js",
     "test": "mocha --timeout 5000 --require @babel/register --recursive --exit --ui tdd tests/"
   },
   "dependencies": {
@@ -18,8 +18,7 @@
     "dotenv": "8.6.0",
     "express": "4.17.2",
     "jsdom": "16.7.0",
-    "mocha": "9.2.0",
-    "nodemon": "2.0.15"
+    "mocha": "9.2.0"
   },
   "license": "MIT"
 }
