test: update tests for new app location

--- a/package.json
+++ b/package.json
@@ -14,29 +14,29 @@
     "update-and-reload-twitch-proxy": "pm2 start scripts/twitch-proxy/updateApiKey.js --no-autorestart --cron \"0 0 1 * *\" && pm2 reload apps/twitch-proxy --update-env",
     "test": "echo 'The test suite is meant to run locally or in a CI environment. \u001b[31mDo NOT run this in production.\u001b[37m If you intend to run the tests, use \"npm run test-local-or-ci\".'",
     "test-local-or-ci": "npm-run-all -s test:*",
-    "test:american-british-translator": "cd american-british-translator && npm run test",
-    "test:anonymous-message-board": "cd anonymous-message-board && cp sample.env .env && npm run test",
-    "test:exercise-tracker": "cd exercise-tracker && cp sample.env .env && npm run test",
-    "test:file-metadata-microservice": "cd file-metadata-microservice && npm run test",
-    "test:forum-proxy": "cd forum-proxy && npm run test",
-    "test:issue-tracker": "cd issue-tracker && cp sample.env .env && npm run test",
-    "test:manage-a-book-trading-club": "cd manage-a-book-trading-club && cp sample.env .env && npm run test",
-    "test:metric-imperial-converter": "cd metric-imperial-converter && npm run test",
-    "test:personal-library": "cd personal-library && cp sample.env .env && npm run test",
-    "test:request-header-parser-microservice": "cd request-header-parser-microservice && npm run test",
-    "test:secure-real-time-multiplayer-game": "cd secure-real-time-multiplayer-game && npm run test",
-    "test:stock-price-checker": "cd stock-price-checker && cp sample.env .env && npm run test",
-    "test:sudoku-solver": "cd sudoku-solver && npm run test",
-    "test:timestamp-microservice": "cd timestamp-microservice && npm run test",
-    "test:url-shortener-microservice": "cd url-shortener-microservice && cp sample.env .env && npm run test",
+    "test:american-british-translator": "cd apps/american-british-translator run test",
+    "test:anonymous-message-board": "cd apps/anonymous-message-board && cp sample.env .env && npm run test",
+    "test:exercise-tracker": "cd apps/exercise-tracker && cp sample.env .env && npm run test",
+    "test:file-metadata-microservice": "cd apps/file-metadata-microservice && npm run test",
+    "test:forum-proxy": "cd apps/forum-proxy && npm run test",
+    "test:issue-tracker": "cd apps/issue-tracker && cp sample.env .env && npm run test",
+    "test:manage-a-book-trading-club": "cd apps/manage-a-book-trading-club && cp sample.env .env && npm run test",
+    "test:metric-imperial-converter": "cd apps/metric-imperial-converter && npm run test",
+    "test:personal-library": "cd apps/personal-library && cp sample.env .env && npm run test",
+    "test:request-header-parser-microservice": "cd apps/request-header-parser-microservice && npm run test",
+    "test:secure-real-time-multiplayer-game": "cd apps/secure-real-time-multiplayer-game && npm run test",
+    "test:stock-price-checker": "cd apps/stock-price-checker && cp sample.env .env && npm run test",
+    "test:sudoku-solver": "cd apps/sudoku-solver && npm run test",
+    "test:timestamp-microservice": "cd apps/timestamp-microservice && npm run test",
+    "test:url-shortener-microservice": "cd apps/url-shortener-microservice && cp sample.env .env && npm run test",
     "__comment": "These don't currently have actual tests, but will assert the server starts.",
-    "pretest:build-a-pinterest-clone": "cd build-a-pinterest-clone && cp sample.env .env",
-    "test:build-a-pinterest-clone": "node test-server-starts.js build-a-pinterest-clone",
-    "test:chart-the-stock-market": "node test-server-starts.js chart-the-stock-market",
-    "test:image-search-abstraction-layer": "node test-server-starts.js image-search-abstraction-layer",
-    "test:p2p-video-chat-application": "node test-server-starts.js p2p-video-chat-application",
-    "pretest:voting-app": "cd voting-app && cp sample.env .env",
-    "test:voting-app": "node test-server-starts.js voting-app"
+    "pretest:build-a-pinterest-clone": "cd apps/build-a-pinterest-clone && cp sample.env .env",
+    "test:build-a-pinterest-clone": "node test-server-starts.js apps/build-a-pinterest-clone",
+    "test:chart-the-stock-market": "node test-server-starts.js apps/chart-the-stock-market",
+    "test:image-search-abstraction-layer": "node test-server-starts.js apps/image-search-abstraction-layer",
+    "test:p2p-video-chat-application": "node test-server-starts.js apps/p2p-video-chat-application",
+    "pretest:voting-app": "cd apps/voting-app && cp sample.env .env",
+    "test:voting-app": "node test-server-starts.js apps/voting-app"
   },
   "devDependencies": {
     "concurrently": "7.0.0",
