--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "description": "Example projects for the freeCodeCamp.org curriculum",
   "scripts": {
     "start": "pm2 start ecosystem.config.js",
-    "restart": "pm2 restart ecosystem.config.js --update-env",
+    "restart": "pm2 restart ecosystem.config.js",
     "stop": "pm2 stop ecosystem.config.js",
     "delete": "pm2 delete ecosystem.config.js",
     "update-and-reload-twitch-proxy": "pm2 start scripts/twitch-proxy/updateApiKey.js --no-autorestart --cron \"0 0 1 * *\" && pm2 reload apps/twitch-proxy --update-env",
