test: add tests for port-map

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "update-and-reload-twitch-proxy": "pm2 start scripts/twitch-proxy/updateApiKey.js --no-autorestart --cron \"0 0 1 * *\" && pm2 reload apps/twitch-proxy --update-env",
     "test": "echo 'The test suite is meant to run locally or in a CI environment. \u001b[31mDo NOT run this in production.\u001b[37m If you intend to run the tests, use \"npm run test-local-or-ci\".'",
     "test-local-or-ci": "npm-run-all -s test:*",
+    "test:config": "jest --rootDir=test",
     "test:american-british-translator": "cd apps/american-british-translator && npm run test",
     "test:anonymous-message-board": "cd apps/anonymous-message-board && cp sample.env .env && npm run test",
     "test:exercise-tracker": "cd apps/exercise-tracker && cp sample.env .env && npm run test",
@@ -40,6 +41,7 @@
   },
   "devDependencies": {
     "concurrently": "7.0.0",
+    "jest": "^27.4.7",
     "npm-run-all": "4.1.5",
     "wait-port": "0.2.9"
   },
