--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "description": "Example projects for the freeCodeCamp.org curriculum",
   "scripts": {
     "start": "pm2 start ecosystem.config.js",
+    "reload": "pm2 reload ecosystem.config.js",
     "restart": "pm2 restart ecosystem.config.js",
     "stop": "pm2 stop ecosystem.config.js",
     "delete": "pm2 delete ecosystem.config.js",
