fix: twitch proxy script

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "restart": "pm2 restart ecosystem.config.js",
     "stop": "pm2 stop ecosystem.config.js",
     "delete": "pm2 delete ecosystem.config.js",
-    "update-and-reload-twitch-proxy": "pm2 start scripts/twitch-proxy/updateApiKey.js --no-autorestart --cron \"0 0 1 * *\" && pm2 reload apps/twitch-proxy --update-env",
+    "update-and-reload-twitch-proxy": "pm2 start scripts/twitch-proxy/updateApiKey.js --no-autorestart --cron \"0 0 1 * *\" && npm run reload -- --only twitch-proxy",
     "test": "echo 'The test suite is meant to run locally or in a CI environment. \u001b[31mDo NOT run this in production.\u001b[37m If you intend to run the tests, use \"npm run test-local-or-ci\".'",
     "test-local-or-ci": "npm-run-all -s test:*",
     "test:config": "jest --rootDir=test",
