chore: remove pm2
pm2 is one of the rare things you do want to install globally.  It might
be fine to also install it locally, but there's potential for conflict.

--- a/package.json
+++ b/package.json
@@ -48,8 +48,7 @@
   },
   "dependencies": {
     "dotenv": "14.3.2",
-    "node-fetch": "2.6.7",
-    "pm2": "5.1.2"
+    "node-fetch": "2.6.7"
   },
   "workspaces": [
     "apps/american-british-translator",
