--- a/apps/personal-library/package.json
+++ b/apps/personal-library/package.json
@@ -16,8 +16,7 @@
 		"express": "4.17.2",
 		"mocha": "9.2.0",
 		"mongodb": "3.7.3",
-		"mongoose": "5.13.14",
-		"zombie": "5.0.8"
+		"mongoose": "5.13.14"
 	},
 	"repository": {
 		"type": "git",
