--- a/apps/stock-price-checker/package.json
+++ b/apps/stock-price-checker/package.json
@@ -20,8 +20,7 @@
     "helmet": "3.23.3",
     "mocha": "9.2.0",
     "mongodb": "3.7.3",
-    "request": "2.88.2",
-    "zombie": "5.0.8"
+    "request": "2.88.2"
   },
   "repository": {
     "type": "git",
