--- a/apps/twitch-proxy/package.json
+++ b/apps/twitch-proxy/package.json
@@ -7,10 +7,10 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "@seald-io/nedb": "^2.2.1",
     "cors": "2.8.5",
     "dotenv": "14.3.2",
     "express": "5.0.0-alpha.8",
-    "nedb": "1.8.0",
     "request": "2.88.2",
     "winston": "3.5.0",
     "winston-daily-rotate-file": "3.10.0"
