--- a/apps/exercise-tracker/package.json
+++ b/apps/exercise-tracker/package.json
@@ -15,8 +15,7 @@
     "express": "4.17.2",
     "mocha": "9.2.0",
     "mongodb": "3.7.3",
-    "mongoose": "5.13.14",
-    "shortid": "2.2.16"
+    "mongoose": "5.13.14"
   },
   "license": "MIT"
 }
