--- a/apps/secure-real-time-multiplayer-game/package.json
+++ b/apps/secure-real-time-multiplayer-game/package.json
@@ -20,8 +20,7 @@
     "helmet": "3.23.3",
     "jsdom": "16.7.0",
     "mocha": "9.2.0",
-    "socket.io": "2.4.1",
-    "socket.io-client": "2.4.0"
+    "socket.io": "2.4.1"
   },
   "license": "MIT"
 }
