--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -5,7 +5,8 @@ ports:
 tasks:
   - init: |
       npm ci
-      mongod --fork --dbpath /data/db
+      mkdir /data/log
+      mongod --fork --dbpath /data/db --logpath /data/log/mongod.log
     command: |
       npm i -g pm2
       for file in apps/**/sample.env; do cp $file ${file/sample/}; done;
