--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "description": "Example projects for the freeCodeCamp.org curriculum",
   "scripts": {
+    "lint": "eslint apps --max-warnings 0",
     "start": "pm2 start ecosystem.config.js",
     "reload": "pm2 reload ecosystem.config.js",
     "restart": "pm2 restart ecosystem.config.js",
@@ -42,8 +43,11 @@
   },
   "devDependencies": {
     "concurrently": "7.0.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-react": "^7.28.0",
     "jest": "27.4.7",
     "npm-run-all": "4.1.5",
+    "prettier": "^2.5.1",
     "wait-port": "0.2.9"
   },
   "dependencies": {
