--- a/.eslintignore
+++ b/.eslintignore
@@ -1,5 +1,7 @@
 # Ignore minified libraries
 apps/voting-app/public/*.min.js
+# Ignore bundles
+apps/build-a-pinterest-clone/public/bundle.js
 # Ignore test runner files?
 apps/**/assertion-analyser.js
 apps/**/test-runner.js
