--- a/apps/p2p-video-chat-application/package.json
+++ b/apps/p2p-video-chat-application/package.json
@@ -9,10 +9,12 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "@rollup/plugin-commonjs": "^21.0.1",
+    "@rollup/plugin-node-resolve": "^13.1.3",
     "dotenv": "14.3.2",
     "express": "4.17.2",
-    "getusermedia": "2.0.1",
     "jquery": "3.6.0",
+    "rollup": "^2.67.0",
     "rollup-plugin-polyfill-node": "^0.8.0",
     "simple-peer": "8.5.0",
     "socket.io": "^4.4.1"
