--- a/apps/p2p-video-chat-application/package.json
+++ b/apps/p2p-video-chat-application/package.json
@@ -16,6 +16,7 @@
     "jquery": "3.6.0",
     "rollup": "^2.67.0",
     "rollup-plugin-polyfill-node": "^0.8.0",
+    "rollup-plugin-terser": "^7.0.2",
     "simple-peer": "8.5.0",
     "socket.io": "^4.4.1"
   }
