--- a/apps/p2p-video-chat-application/package.json
+++ b/apps/p2p-video-chat-application/package.json
@@ -7,6 +7,7 @@
     "build": "rollup -c",
     "test": "wait-port -t 10000 3000",
     "start": "node server.js",
+    "dev": "concurrently \"rollup -c -w\" \"nodemon server.js\"",
     "prepare": "npm run build"
   },
   "dependencies": {
@@ -20,5 +21,9 @@
     "rollup-plugin-terser": "^7.0.2",
     "simple-peer": "8.5.0",
     "socket.io": "^4.4.1"
+  },
+  "devDependencies": {
+    "concurrently": "^7.0.0",
+    "nodemon": "^2.0.15"
   }
 }
