--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,5 +18,13 @@
       "version": "16.4.2"
     }
   },
-  "extends": ["eslint:recommended", "plugin:react/recommended", "prettier"]
+  "extends": ["eslint:recommended", "plugin:react/recommended", "prettier"],
+  "overrides": [
+    {
+      "files": ["apps/secure-real-time-multiplayer-game/tests/1_unit-tests.js"],
+      "parserOptions": {
+        "sourceType": "module"
+      }
+    }
+  ]
 }
