--- a/.github/workflows/node-ci.yml
+++ b/.github/workflows/node-ci.yml
@@ -29,5 +29,8 @@ jobs:
       - name: Install Dependencies
         run: npm ci
 
+      - name: Lint Files
+        run: npm run lint
+
       - name: Run Tests
         run: npm run test-local-or-ci
