fix: use single connection for app process
Rather than connecting and closing for each request

--- a/apps/image-search-abstraction-layer/sample.env
+++ b/apps/image-search-abstraction-layer/sample.env
@@ -1,6 +1,6 @@
 PORT=
 
-MONGO_URI=
+MONGO_URI="mongodb://localhost:27017/image-search-abstraction-layer"
 
 # keys for google-images package:
 # https://www.npmjs.com/package/google-images
