fix: browserify to rollup (#153)
* fix: rollup build-a-pinterest-clone

* fix: rollup p2p-video-chat-application

* fix: include SimplePeer constructor

* feat: save a bit of space with terser

* refactor: use prepare script instead of committing

* chore: ignore bundles

* build: add dev scripts

* chore: update package-lock

--- a/.eslintignore
+++ b/.eslintignore
@@ -1,5 +1,8 @@
 # Ignore minified libraries
 apps/voting-app/public/*.min.js
+# Ignore bundles
+apps/build-a-pinterest-clone/public/bundle.js
+apps/p2p-video-chat-application/public/bundle.js
 # Ignore test runner files?
 apps/**/assertion-analyser.js
 apps/**/test-runner.js
