--- a/apps/build-a-pinterest-clone/package.json
+++ b/apps/build-a-pinterest-clone/package.json
@@ -5,25 +5,38 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "test": "wait-port -t 10000 3000"
+    "test": "wait-port -t 10000 3000",
+    "build": "rollup -c",
+    "dev": "concurrently \"rollup -c -w\" \"nodemon server.js\"",
+    "prepare": "npm run build"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "babel-core": "6.26.3",
-    "babel-preset-react": "6.24.1",
+    "@babel/core": "^7.16.12",
+    "@babel/preset-env": "^7.16.11",
+    "@babel/preset-react": "^7.16.7",
+    "@rollup/plugin-babel": "^5.3.0",
+    "@rollup/plugin-commonjs": "^21.0.1",
+    "@rollup/plugin-node-resolve": "^13.1.3",
+    "@rollup/plugin-replace": "^3.0.1",
     "body-parser": "1.19.1",
     "connect-mongo": "3.2.0",
     "dotenv": "14.3.2",
     "express": "5.0.0-alpha.8",
-    "express-babelify-middleware": "0.2.1",
     "express-session": "1.17.2",
     "mongoose": "5.13.14",
     "passport": "0.5.2",
     "passport-github": "1.1.0",
     "react": "15.7.0",
     "react-dom": "15.7.0",
-    "react-masonry-component": "6.3.0"
+    "react-masonry-component": "6.3.0",
+    "rollup": "^2.67.0",
+    "rollup-plugin-terser": "^7.0.2"
+  },
+  "devDependencies": {
+    "concurrently": "^7.0.0",
+    "nodemon": "^2.0.15"
   }
 }
